docs/snippets/traefik-proxy/ingress-route-public-private.yaml
---
apiVersion: traefik.io/v1
kind: IngressRoute
metadata:
  name: traefik-public-abc
  annotations:
    kubernetes.io/ingress.class: traefik-public
  labels:
    # required for traefik
    traffic-type: private
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`application.public.example.com`)
      kind: Rule
      services:
        - name: service
          namespace: namespace
          port: port
  tls:
    secretName: traefik-tls-cert-public
---
apiVersion: traefik.io/v1
kind: IngressRoute
metadata:
  name: traefik-private-abc
  annotations:
    kubernetes.io/ingress.class: traefik-private
  labels:
    # required for traefik
    traffic-type: private
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`application.private.tlc`)
      kind: Rule
      services:
        - name: service
          namespace: namespace
          port: port
  tls:
    secretName: traefik-tls-cert-private
